--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "env-cmd ./config/dev.env nodemon src/index.js",
-    "test" : "jest"
+    "test": "jest --watch"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "env-cmd": "^8.0.2",
-    "jest": "^23.6.0",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20"
   }
 }
